heading and tagline

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Check Fact</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <h2 class="centered">Check Fact</h2>
+      <p class="centered">Your friend in finding the truth!</p>
+    </div>
   </body>
 </html>
