--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <body>
     <div class="container">
       <h2 class="centered">Check Fact</h2>
-      <p class="centered">Your friend in finding the truth!</p>
+      <p class="centered">Know the truth!</p>
+      <textarea
+        id="claimInput"
+        placeholder="e.g. The statue of liberty is visible from space."
+      ></textarea>
     </div>
   </body>
 </html>
