button check created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         id="claimInput"
         placeholder="e.g. The statue of liberty is visible from space."
       ></textarea>
+      <div class="centered">
+        <button onclick="checkClaim()">Check</button>
+      </div>
     </div>
   </body>
 </html>
