--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       ></textarea>
       <div class="centered">
         <button onclick="checkClaim()">Check</button>
+        <div id="result"></div>
       </div>
     </div>
   </body>
