label for fact entering

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
       <h2 class="centered">Check Fact</h2>
       <p class="centered">Know the truth!</p>
+      <label for="claimInput">Enter fact:</label>
       <textarea
         id="claimInput"
         placeholder="e.g. The statue of liberty is visible from space."
